--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@ h1,h4
 
 <title>Car Racing Game</title>
 </head>
-<body onload="add();">
+<body onload="add_car();">
 	<center>
 		<h1>Car Racing Game by Suhani Gupta</h1>
 		<h1>Game status : <span id="Game_status"></span></h1>
